--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@azure/msal-angular": "^2.1.0",
+    "@azure/msal-browser": "^2.21.0",
+    "@azure/msal-common": "^6.0.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
