--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,30 +10,20 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "esnext",
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@flights-data/data-flight": [
-        "libs/data-flight/src/index.ts"
-      ],
+      "@flights-data/data-flight": ["libs/data-flight/src/index.ts"],
       "@flights-data/feature-flight-logic": [
         "libs/feature-flight-logic/src/index.ts"
       ],
-      "@flights-data/ui-navbar": [
-        "libs/ui-navbar/src/index.ts"
-      ],
-      "@flights-data/util-filter": [
-        "libs/util-filter/src/index.ts"
-      ]
+      "@flights-data/ui-flight-table": ["libs/ui-flight-table/src/index.ts"],
+      "@flights-data/ui-navbar": ["libs/ui-navbar/src/index.ts"],
+      "@flights-data/ui-view-flights": ["libs/ui-view-flights/src/index.ts"],
+      "@flights-data/util-filter": ["libs/util-filter/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
