--- a/package.json
+++ b/package.json
@@ -51,8 +51,13 @@
     "@nrwl/linter": "13.4.2",
     "@nrwl/nest": "^13.4.2",
     "@nrwl/node": "13.4.2",
+    "@nrwl/storybook": "^13.4.6",
     "@nrwl/tao": "13.4.2",
     "@nrwl/workspace": "13.4.2",
+    "@storybook/addon-essentials": "~6.4.5",
+    "@storybook/angular": "~6.4.5",
+    "@storybook/builder-webpack5": "~6.4.5",
+    "@storybook/manager-webpack5": "~6.4.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
