--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,153 @@
 {
   "version": 1,
   "projects": {
+    "add-flights": {
+      "projectType": "application",
+      "root": "apps/add-flights",
+      "sourceRoot": "apps/add-flights/src",
+      "prefix": "flights-data",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:webpack-browser",
+          "outputs": [
+            "{options.outputPath}"
+          ],
+          "options": {
+            "outputPath": "dist/apps/add-flights",
+            "index": "apps/add-flights/src/index.html",
+            "main": "apps/add-flights/src/main.ts",
+            "polyfills": "apps/add-flights/src/polyfills.ts",
+            "tsConfig": "apps/add-flights/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "apps/add-flights/src/favicon.ico",
+              "apps/add-flights/src/assets"
+            ],
+            "styles": [
+              "apps/add-flights/src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"],
+            "customWebpackConfig": {
+              "path": "apps/add-flights/webpack.config.js"
+            },
+            "commonChunk": false
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/add-flights/src/environments/environment.ts",
+                  "with": "apps/add-flights/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all",
+              "customWebpackConfig": {
+                "path": "apps/add-flights/webpack.prod.config.js"
+              }
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@nrwl/angular:webpack-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "add-flights:build:production"
+            },
+            "development": {
+              "browserTarget": "add-flights:build:development"
+            }
+          },
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 8080,
+            "publicHost": "http://localhost:8080"
+          }
+        },
+        "extract-i18n": {
+          "builder": "ngx-build-plus:extract-i18n",
+          "options": {
+            "browserTarget": "add-flights:build",
+            "extraWebpackConfig": "apps/add-flights/webpack.config.js"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/add-flights/src/**/*.ts",
+              "apps/add-flights/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": [
+            "coverage/apps/add-flights"
+          ],
+          "options": {
+            "jestConfig": "apps/add-flights/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "add-flights-e2e": {
+      "root": "apps/add-flights-e2e",
+      "sourceRoot": "apps/add-flights-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/add-flights-e2e/cypress.json",
+            "devServerTarget": "add-flights:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "add-flights:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "outputs": [
+            "{options.outputFile}"
+          ],
+          "options": {
+            "lintFilePatterns": [
+              "apps/add-flights-e2e/**/*.{js,ts}"
+            ]
+          }
+        }
+      },
+      "tags": [],
+      "implicitDependencies": [
+        "add-flights"
+      ]
+    },
     "data-flight": {
       "projectType": "library",
       "root": "libs/data-flight",
@@ -9,7 +156,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/data-flight"],
+          "outputs": [
+            "coverage/libs/data-flight"
+          ],
           "options": {
             "jestConfig": "libs/data-flight/jest.config.js",
             "passWithNoTests": true
@@ -35,7 +184,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/feature-flight-logic"],
+          "outputs": [
+            "coverage/libs/feature-flight-logic"
+          ],
           "options": {
             "jestConfig": "libs/feature-flight-logic/jest.config.js",
             "passWithNoTests": true
@@ -60,12 +211,16 @@
       "architect": {
         "build": {
           "builder": "@nrwl/node:build",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/flight-api",
             "main": "apps/flight-api/src/main.ts",
             "tsConfig": "apps/flight-api/tsconfig.app.json",
-            "assets": ["apps/flight-api/src/assets"]
+            "assets": [
+              "apps/flight-api/src/assets"
+            ]
           },
           "configurations": {
             "production": {
@@ -89,14 +244,20 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/flight-api/**/*.ts"]
+            "lintFilePatterns": [
+              "apps/flight-api/**/*.ts"
+            ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/flight-api"],
+          "outputs": [
+            "coverage/apps/flight-api"
+          ],
           "options": {
             "jestConfig": "apps/flight-api/jest.config.js",
             "passWithNoTests": true
@@ -113,7 +274,9 @@
       "architect": {
         "build": {
           "builder": "@nrwl/angular:webpack-browser",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/flights",
             "index": "apps/flights/src/index.html",
@@ -129,7 +292,9 @@
               "apps/flights/src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "customWebpackConfig": {
               "path": "apps/flights/webpack.config.js"
             },
@@ -205,7 +370,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/flights"],
+          "outputs": [
+            "coverage/apps/flights"
+          ],
           "options": {
             "jestConfig": "apps/flights/jest.config.js",
             "passWithNoTests": true
@@ -233,14 +400,20 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/flights-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/flights-e2e/**/*.{js,ts}"
+            ]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": ["flights"]
+      "implicitDependencies": [
+        "flights"
+      ]
     },
     "shell": {
       "projectType": "application",
@@ -250,7 +423,9 @@
       "architect": {
         "build": {
           "builder": "@nrwl/angular:webpack-browser",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "outputPath": "dist/apps/shell",
             "index": "apps/shell/src/index.html",
@@ -258,12 +433,17 @@
             "polyfills": "apps/shell/src/polyfills.ts",
             "tsConfig": "apps/shell/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["apps/shell/src/favicon.ico", "apps/shell/src/assets"],
+            "assets": [
+              "apps/shell/src/favicon.ico",
+              "apps/shell/src/assets"
+            ],
             "styles": [
               "apps/shell/src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "customWebpackConfig": {
               "path": "apps/shell/webpack.config.js"
             },
@@ -339,7 +519,9 @@
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/shell"],
+          "outputs": [
+            "coverage/apps/shell"
+          ],
           "options": {
             "jestConfig": "apps/shell/jest.config.js",
             "passWithNoTests": true
@@ -367,14 +549,48 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/shell-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/shell-e2e/**/*.{js,ts}"
+            ]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": ["shell"]
+      "implicitDependencies": [
+        "shell"
+      ]
+    },
+    "ui-add-flights": {
+      "projectType": "library",
+      "root": "libs/ui-add-flights",
+      "sourceRoot": "libs/ui-add-flights/src",
+      "prefix": "flights-data",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": [
+            "coverage/libs/ui-add-flights"
+          ],
+          "options": {
+            "jestConfig": "libs/ui-add-flights/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/ui-add-flights/src/**/*.ts",
+              "libs/ui-add-flights/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
     },
     "ui-navbar": {
       "projectType": "library",
@@ -384,7 +600,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/ui-navbar"],
+          "outputs": [
+            "coverage/libs/ui-navbar"
+          ],
           "options": {
             "jestConfig": "libs/ui-navbar/jest.config.js",
             "passWithNoTests": true
@@ -402,6 +620,34 @@
       },
       "tags": []
     },
+    "ui-popup": {
+      "projectType": "library",
+      "root": "libs/ui-popup",
+      "sourceRoot": "libs/ui-popup/src",
+      "prefix": "flights-data",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": [
+            "coverage/libs/ui-popup"
+          ],
+          "options": {
+            "jestConfig": "libs/ui-popup/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/ui-popup/src/**/*.ts",
+              "libs/ui-popup/src/**/*.html"
+            ]
+          }
+        }
+      },
+      "tags": []
+    },
     "ui-view-flights": {
       "projectType": "library",
       "root": "libs/ui-view-flights",
@@ -410,7 +656,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/ui-view-flights"],
+          "outputs": [
+            "coverage/libs/ui-view-flights"
+          ],
           "options": {
             "jestConfig": "libs/ui-view-flights/jest.config.js",
             "passWithNoTests": true
@@ -442,7 +690,9 @@
         },
         "build-storybook": {
           "builder": "@nrwl/storybook:build",
-          "outputs": ["{options.outputPath}"],
+          "outputs": [
+            "{options.outputPath}"
+          ],
           "options": {
             "uiFramework": "@storybook/angular",
             "outputPath": "dist/storybook/ui-view-flights",
@@ -478,14 +728,20 @@
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
-          "outputs": ["{options.outputFile}"],
+          "outputs": [
+            "{options.outputFile}"
+          ],
           "options": {
-            "lintFilePatterns": ["apps/ui-view-flights-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": [
+              "apps/ui-view-flights-e2e/**/*.{js,ts}"
+            ]
           }
         }
       },
       "tags": [],
-      "implicitDependencies": ["ui-view-flights"]
+      "implicitDependencies": [
+        "ui-view-flights"
+      ]
     },
     "util-filter": {
       "projectType": "library",
@@ -495,7 +751,9 @@
       "architect": {
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/libs/util-filter"],
+          "outputs": [
+            "coverage/libs/util-filter"
+          ],
           "options": {
             "jestConfig": "libs/util-filter/jest.config.js",
             "passWithNoTests": true
