--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
+    "chromatic": "^6.4.1",
     "cypress": "^9.1.0",
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
